--- a/cv/index.html
+++ b/cv/index.html
@@ -5,16 +5,34 @@
 <head>
     <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<meta content="Ricardo Semião e Castro" name="Author"/>
-<link href="/assets/img/icon.png" rel="icon" type="image/png"/>
-<link href="/assets/img/icon.png" rel="shortcut icon" type="image/png"/>
 
     <title>Ricardo Semião | CV</title>
+    <meta name="description" content="Ricardo Semião's curriculum vitae.">
     
     <link href="/assets/global.css" rel="stylesheet"/>
-
+<link as="font" crossorigin="" href="/assets/fonts/montserrat-v31-latin-regular.woff2" rel="preload" type="font/woff2"/>
+<link as="font" crossorigin="" href="/assets/fonts/montserrat-v31-latin-700.woff2" rel="preload" type="font/woff2"/>
     <link rel="stylesheet" href="./module.css">
+
+    <link href="/assets/img/icon.png" rel="icon" type="image/png"/>
+<link href="/assets/img/icon.png" rel="shortcut icon" type="image/png"/>
+<meta content="Ricardo Semião e Castro" name="Author"/>
+    <meta property="og:image" content="/index/profile_picture.webp">
+
     <script data-goatcounter="https://ricardo-semiao.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
+
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "ProfilePage",
+        "name": "Ricardo Semião Professional Curriculum Vitae (CV)",
+        "description": "Ricardo Semião's professional history, skills, experience, and education.",
+        "author": { "@id": "https://ricardo-semiao.github.io/#person" },
+        "url": "https://ricardo-semiao.github.io/cv/",
+        "isPartOf": { "@id": "https://ricardo-semiao.github.io/#website" },
+        "mainEntity": { "@id": "https://ricardo-semiao.github.io/#person" }
+    }
+    </script>
 </head>
 
 
