--- a/src/global/global_components.html
+++ b/src/global/global_components.html
@@ -1,13 +1,18 @@
-<div data-component-name="site-meta">
+<div data-component-name="site-charset-viewport">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="Author" content="Ricardo Semião e Castro">
-    <link rel="icon" href="/assets/img/icon.png" type="image/png">
-    <link rel="shortcut icon" href="/assets/img/icon.png" type="image/png">
 </div>
 
 <div data-component-name="site-style">
     <link rel="stylesheet" href="/assets/global.css">
+    <link rel="preload" href="/assets/fonts/montserrat-v31-latin-regular.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/assets/fonts/montserrat-v31-latin-700.woff2" as="font" type="font/woff2" crossorigin>
+</div>
+
+<div data-component-name="site-social">
+    <link rel="icon" href="/assets/img/icon.png" type="image/png">
+    <link rel="shortcut icon" href="/assets/img/icon.png" type="image/png">
+    <meta name="Author" content="Ricardo Semião e Castro">
 </div>
 
 <div data-component-name="site-scripts">
