--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link href="/assets/img/icon.png" rel="icon" type="image/png"/>
 <link href="/assets/img/icon.png" rel="shortcut icon" type="image/png"/>
 <meta content="Ricardo Semião e Castro" name="Author"/>
-    <meta property="og:image" content="/index/profile_picture.webp">
+    <meta property="og:image" content="/index/profile_picture.jpg">
 
     <script data-goatcounter="https://ricardo-semiao.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 
@@ -37,7 +37,7 @@
             "name": "Ricardo Semião e Castro",
             "description": "Master's student in economics, with interests in statistics, data science, and programming.",
             "url": "https://ricardo-semiao.github.io/",
-            "image": "https://ricardo-semiao.github.io/index/profile_picture.webp",
+            "image": "https://ricardo-semiao.github.io/index/profile_picture.jpg",
             "sameAs": [
                 "https://github.com/ricardo-semiao",
                 "https://linkedin.com/in/ricardo-semiao",
@@ -132,7 +132,7 @@
                     <p>In the navbar above you can find my blog, CV, a gallery, and some of my projects. Hover the '<svg><use href="/assets/img/icons.svg#icon-info"></use></svg>' icons below to see a brief explanation of each project.</p>
                 </div>
                 <div class="column-img">
-                    <img src="/index/profile_picture.webp" alt="Profile Picture">
+                    <img src="/index/profile_picture.jpg" alt="Profile Picture">
                 </div>
             </div>
         </section>
