--- a/cv/index.html
+++ b/cv/index.html
@@ -17,7 +17,7 @@
     <link href="/assets/img/icon.png" rel="icon" type="image/png"/>
 <link href="/assets/img/icon.png" rel="shortcut icon" type="image/png"/>
 <meta content="Ricardo Semião e Castro" name="Author"/>
-    <meta property="og:image" content="/index/profile_picture.webp">
+    <meta property="og:image" content="/index/profile_picture.jpg">
 
     <script data-goatcounter="https://ricardo-semiao.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
 
@@ -86,9 +86,10 @@
             <h2>Education and Skills</h2> 
             <dl>
                 <dt>Education</dt>
-                <dd>Bachelor's Degree in Economics - FGV-EESP (2019 - 2023)</dd>
-                <div></div>
-                <dd>Master's Degree in Economics - FGV-EESP (2024 - ongoing)</dd>
+                <dd>
+                    <p>Bachelor's Degree in Economics - FGV-EESP (2019 - 2023)</p>
+                    <p>Master's Degree in Economics - FGV-EESP (2024 - ongoing)</p>
+                </dd>
 
                 <dt>Languages</dt>
                 <dd>Fluent English - Cambridge English: Advanced (C1) Certificate</dd>
