--- a/src/global/global_components.html
+++ b/src/global/global_components.html
@@ -4,14 +4,54 @@
 </div>
 
 <div data-component-name="site-style">
-    <link rel="stylesheet" href="/assets/global.css">
+    <style>
+        @font-face {
+            font-display: swap;
+            font-family: 'Montserrat';
+            font-style: normal;
+            font-weight: 400;
+            src: url('/assets/fonts/montserrat-v31-latin-regular.woff2') format('woff2');
+        }
+        @font-face {
+            font-display: swap;
+            font-family: 'Montserrat';
+            font-style: normal;
+            font-weight: 700;
+            src: url('/assets/fonts/montserrat-v31-latin-700.woff2') format('woff2');
+        }
+        @font-face {
+            font-display: swap;
+            font-family: 'Nunito Sans';
+            font-style: normal;
+            font-weight: 400;
+            src: url('/assets/fonts/nunito-sans-v19-latin-regular.woff2') format('woff2');
+        }
+        @font-face {
+            font-display: swap;
+            font-family: 'Nunito Sans';
+            font-style: italic;
+            font-weight: 400;
+            src: url('/assets/fonts/nunito-sans-v19-latin-italic.woff2') format('woff2');
+        }
+        @font-face {
+            font-display: swap;
+            font-family: 'Nunito Sans';
+            font-style: normal;
+            font-weight: 700;
+            src: url('/assets/fonts/nunito-sans-v19-latin-700.woff2') format('woff2');
+        }
+    </style>
     <link rel="preload" href="/assets/fonts/montserrat-v31-latin-regular.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="/assets/fonts/montserrat-v31-latin-700.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/assets/fonts/nunito-sans-v19-latin-regular.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/assets/fonts/nunito-sans-v19-latin-700.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/assets/fonts/nunito-sans-v19-latin-italic.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="stylesheet" href="/assets/global.css">
 </div>
 
 <div data-component-name="site-social">
-    <link rel="icon" href="/assets/img/icon.png" type="image/png">
-    <link rel="shortcut icon" href="/assets/img/icon.png" type="image/png">
+    <link rel="icon" href="/assets/img/icon.webp" type="image/png">
+    <link rel="shortcut icon" href="/assets/img/icon.webp" type="image/png">
     <meta name="Author" content="Ricardo Semião e Castro">
 </div>
 
