--- a/tools/mtsdesc/404.html
+++ b/tools/mtsdesc/404.html
@@ -63,7 +63,7 @@
 </head>
 <body class="rssite-external">
 <!-- @@site-icons@@ -->
-<a class="visually-hidden-focusable" href="#main">Skip to contents</a>
+<a class="visually-hidden-focusable" href="./#main">Skip to contents</a>
 <header id="rssite-header">
 <nav aria-label="Main site navigation">
 <ul>
@@ -90,7 +90,7 @@
 </li>
 </ul>
 </nav>
-</header><main class="rssite-rspkgdown" id="rssite-main"><main id="rspkgdown-main"><nav aria-label="Site navigation" class="navbar navbar-expand-lg fixed-top bg-light" data-bs-theme="light" id="pkgdown-navbar"><div class="container">
+</header><main class="rssite-rspkgdown" id="rssite-main"><main id="rspkgdown-main"><nav aria-label="Site navigation" class="navbar navbar-expand-lg fixed-top bg-light" data-bs-theme="light"><div class="container">
 <a class="navbar-brand me-2" href="index.html">mtsdesc</a>
 <small class="nav-text text-muted me-auto" data-bs-placement="bottom" data-bs-toggle="tooltip" title="">0.0.0.9000</small>
 <button aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler" data-bs-target="#navbar" data-bs-toggle="collapse" type="button">
