--- a/src/global/global_components.html
+++ b/src/global/global_components.html
@@ -7,38 +7,38 @@
     <style>
         @font-face {
             font-display: swap;
-            font-family: 'Montserrat';
+            font-family: "Montserrat";
             font-style: normal;
             font-weight: 400;
-            src: url('/assets/fonts/montserrat-v31-latin-regular.woff2') format('woff2');
+            src: url("/assets/fonts/montserrat-v31-latin-regular.woff2") format("woff2");
         }
         @font-face {
             font-display: swap;
-            font-family: 'Montserrat';
+            font-family: "Montserrat";
             font-style: normal;
             font-weight: 700;
-            src: url('/assets/fonts/montserrat-v31-latin-700.woff2') format('woff2');
+            src: url("/assets/fonts/montserrat-v31-latin-700.woff2") format("woff2");
         }
         @font-face {
             font-display: swap;
-            font-family: 'Nunito Sans';
+            font-family: "Nunito Sans";
             font-style: normal;
             font-weight: 400;
-            src: url('/assets/fonts/nunito-sans-v19-latin-regular.woff2') format('woff2');
+            src: url("/assets/fonts/nunito-sans-v19-latin-regular.woff2") format("woff2");
         }
         @font-face {
             font-display: swap;
-            font-family: 'Nunito Sans';
+            font-family: "Nunito Sans";
             font-style: italic;
             font-weight: 400;
-            src: url('/assets/fonts/nunito-sans-v19-latin-italic.woff2') format('woff2');
+            src: url("/assets/fonts/nunito-sans-v19-latin-italic.woff2") format("woff2");
         }
         @font-face {
             font-display: swap;
-            font-family: 'Nunito Sans';
+            font-family: "Nunito Sans";
             font-style: normal;
             font-weight: 700;
-            src: url('/assets/fonts/nunito-sans-v19-latin-700.woff2') format('woff2');
+            src: url("/assets/fonts/nunito-sans-v19-latin-700.woff2") format("woff2");
         }
     </style>
     <link rel="preload" href="/assets/fonts/montserrat-v31-latin-regular.woff2" as="font" type="font/woff2" crossorigin>
